--- a/app/index.html
+++ b/app/index.html
@@ -58,5 +58,32 @@
             </ul>
         </nav>
     </aside>
+    <main>
+        <div class="container">
+            <header class="header">
+                <div class="header__main">
+                    <h1>Overview</h1>
+                    <div class="header__buttons">
+                        <div class="header__search">
+                            <div class="header__searchbar">
+                                <label for="search" data-search_line class="header__line "></label>
+                                <input data-search_bar type="search" name="search" disabled>
+                            </div>
+                            <button> 
+                                <img data-search_btn src="images/icons/search.svg" alt="search">
+                            </button>
+                        </div>
+                        <button class="header__notifications">
+                            <img src="images/icons/notific_ring.svg" alt="notifications">
+                        </button>
+                    </div>
+                </div>
+                <div class="header__account">
+                    <h2 class="name">Jones Ferdinand</h2>
+                    <button class="header__avatar"></button>
+                </div>
+            </header>
+        </div>
+    </main>
 </body>
 </html>
