--- a/app/index.html
+++ b/app/index.html
@@ -83,6 +83,26 @@
                     <button class="header__avatar"></button>
                 </div>
             </header>
+
+            <section class="tabs">
+                <button class="tabs__item">
+                    <h3>Unresolved</h3>
+                    <span>60</span>
+                </button>
+                <button class="tabs__item">
+                    <h3>Overdue</h3>
+                    <span>16</span>
+                </button>
+                <button class="tabs__item">
+                    <h3>Open</h3>
+                    <span>43</span>
+                </button>
+                <button class="tabs__item">
+                    <h3>On hold</h3>
+                    <span>64</span>
+                </button>
+            </section>
+
         </div>
     </main>
 </body>
